[project]
name = "qiita-editor-with-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.23.3",
    "openai-agents>=0.0.7",
    "python-dotenv>=1.1.0",
    "qiita-sdk>=1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
]
